<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/preference_category_general">

        <rikka.preference.SimpleMenuPreference
            android:defaultValue="-1"
            android:entries="@array/theme_texts"
            android:entryValues="@array/theme_values"
            android:icon="@drawable/ic_dark_mode"
            android:key="darkTheme"
            android:summary="%s"
            android:title="@string/dark_theme" />

        <rikka.preference.SimpleMenuPreference
            android:title="@string/map_type_title"
            android:summary="%s"
            android:icon="@drawable/ic_map_type"
            android:key="map_type"
            android:dialogTitle="@string/map_type_title"
            android:entries="@array/map_type"
            android:entryValues="@array/map_value"
            android:defaultValue="1"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/xposed">

        <CheckBoxPreference
            android:title="@string/advance_hook"
            android:summary="@string/advance_hook_summary"
            android:key="isHookedSystem"
            android:icon="@drawable/ic_advance_hook"/>

        <rikka.preference.SimpleMenuPreference
            android:key="movement_mode"
            android:title="@string/movement_mode_title"
            android:dialogTitle="@string/movement_mode_title"
            android:entries="@array/movement_mode_texts"
            android:entryValues="@array/movement_mode_values"
            android:defaultValue="small"
            android:icon="@drawable/ic_random_position"
            android:summary="%s"/>

        <EditTextPreference
            android:defaultValue="3"
            android:digits="0123456789"
            android:icon="@drawable/ic_movement_radius"
            android:key="movement_radius"
            android:title="@string/movement_radius_title"
            android:summary="@string/movement_radius_summary"/>

        <EditTextPreference
            android:defaultValue="0.3"
            android:digits="0123456789.,"
            android:icon="@drawable/ic_movement_speed"
            android:key="movement_speed"
            android:title="@string/movement_speed_title"
            android:summary="@string/movement_speed_summary"/>

        <EditTextPreference
            android:defaultValue="10"
            android:digits="0123456789"
            android:key="accuracy_settings"
            android:title="@string/settings_of_accuracy"
            android:icon="@drawable/ic_accuracy"
            android:summary="10 m."/>


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/stealth_category">

        <CheckBoxPreference
            android:title="@string/hide_from_apps"
            android:summary="@string/hide_from_apps_summary"
            android:key="hide_from_apps"
            android:defaultValue="true"
            android:icon="@drawable/ic_advance_hook" />

    </PreferenceCategory>




</PreferenceScreen>
